--- a/l4/style.css
+++ b/l4/style.css
@@ -1,6 +1,44 @@
-#container {
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
+@media(max-width: 639px){
+    #container{
+        display: grid;
+        grid-template-areas: "menu"
+        "msg"
+        "msg-content"; 
+        grid-template-rows: auto auto auto; 
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #menu{
+        width: 100%;
+    }
+}
+
+@media(min-width: 640px) and (max-width: 959px){
+    #container{
+        display: grid;
+        grid-template-areas: "menu msg"
+        "menu msg-content"; 
+        grid-template-columns: 150px auto;
+        grid-template-rows: 350px auto;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #menu{
+        height: 100vh;
+    }
+}
+
+@media(min-width: 960px){
+    #container{
+        display: grid;
+        grid-template-areas: "menu msg msg-content";
+        font-family: Arial, Helvetica, sans-serif;
+        grid-template-columns: 150px 350px auto;
+    }
+
+    #menu{
+        height: 100vh;
+    }
 }
 
 body {
@@ -8,57 +46,87 @@ body {
     margin: 0;
 }
 
-@media(max-width: 639px){
-
-
-
 #menu{
-    display: flex;
-    width: 100vw;
-    height: 100%;
+    grid-area: menu;
     background-color: #252a3a;
     font-size: 16px;
     color: white;
+    display: flex;
 }
+
+#firstlist > *, #secondlist > *{
+    margin-bottom: 6px;
+}
+
+#btncompose{
+    width: 100%;
+    align-content: center;
+}
+
 #compose {
     border-radius: 20px;
     padding: 8px 16px;
     margin: 16px;
+    color: white;
+    font-weight: bold;
+    border-color: rgba(0,0,0,0);
     background-color: #1B98F8;
 }
 
-#msg {
-    width: 100vw;
-    height: 100vh;
+#firstlist{
+    list-style-type: none;
 }
 
-#msg > * {
+#firstlist *:hover{
+    background-color: red;
+}
+
+#msg {
+    grid-area: msg;
+    overflow: scroll;
+}
+
+.msg-l {
     padding: 14px 16px;
 }
 
-.avatar {
+.avatar{
+    display: inline-block;
+    float: left;
+    height: 100%;
+}
+
+.avatar *{
+    display: inline-block;
     width: 42px;
     height: 42px;
     border-radius: 3px;
     margin-right: 8px;
 }
 
-#msg:nth-child(1){
+.personal-info{
+    display: inline-block;
+    float: left;
+}
+
+.msg-l:nth-child(1){
     background-color: #eee;
 }
 
-#msg:nth-child(2) #msg:nth-child(3) {
-    border-left: 6px #1B98F8;
+.msg-l:nth-child(2), .msg-l:nth-child(3) {
+    border-left: 6px #1B98F8 solid;
 }
 
 .name-surname{
     font-size: 13px;
+    font-weight: bold;
     color: #999;
     text-transform: uppercase;
 }
 
 .title {
     font-size: 16px;
+    font-weight: bold;
     color: black;
 }
 
@@ -71,11 +139,6 @@ body {
 .mail {
     width: auto;
     height: auto;
-}
-
-.title {
-    font-size: 32px;
-    color: black;
 }
 
 .info-under-title {
@@ -103,4 +166,6 @@ body {
     padding: 6px 26px;
 }
 
+#msg-content{
+    grid-area: msg-content;
 }
