--- a/l6/style.css
+++ b/l6/style.css
@@ -1,42 +1,49 @@
-#left-sticker{
+.sticker {
     height: 200px;
-    display: inline-block;
-    width: 200px;
+    display: flex;
+    width: 200px; 
+}
+
+#left-sticker{
     background-color: blue;
-    margin-right: 10px;
+    margin-right: 20px;
+    --direction: 1;
 }
 
 #right-sticker{
-    height: 200px;
-    display: inline-block;
-    width: 200px;
     background-color: red;
+    --direction: -1;
 }
 
 #main{
     width: 420px;
     display: flex;
+    margin-bottom: 100px;
+    margin-left: 100px;
+    margin-top: 100px;
 }
 
-.rotor{
-    animation: rotate 1s linear 0s 1 alternate forwards;
+.animation {
+    --distance: 20px;
+    animation: slide 0.65s;
+    animation-fill-mode: both;
+    animation-timing-function: linear;
 }
 
-.left-anim{
-    animation: changesize 1s linear 0s 1 alternate forwards;
+@keyframes slide{
+    from {
+        transform: translateX(calc(var(--distance) * var(--direction)))
+        scale(calc(1 + var(--order)*0.1));
+        z-index:var(--order)
+    }
+    50% {
+        transform: translateX(calc(var(--distance) * -1 * var(--direction))) 
+        scale(1)
+    }
+    to {
+        transform: translateX(calc(var(--distance) * var(--direction)))
+        scale(calc(1 - var(--order)*0.1));
+        z-index:calc(var(--order) * -1)
+    }
 }
 
-.right-anim{
-    animation: changesize 1s linear 0s 1 alternate-reverse forwards;
-}
-
-@keyframes rotate{
-    0% {transform: rotateY(-45deg)}
-    100% {transform: rotateY(45deg)}
-}
-
-@keyframes changesize{
-    0%{transform: scaleY(0.7); z-index: -1;}
-    50% {transform: scaleY(1); z-index: 0;}
-    100% {transform: scaleX(1.41); z-index: 1;}
-}
